# 9mlet-tech-challenge-1-churn-prevision

./: .gitignore  Makefile  README.md  eda.ipynb  mlflow.db  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/.setai/: .gitignore  README.md
.cursor/commands/: architecture-review.md  challenge-solution.md  extract-business-rules.md  generate-boilerplate.md  generate-docs.md  kickoff-project.md  pre-deploy-validation.md  refactor-controlled.md  review-pr.md  test-strategy.md
.cursor/context/: architecture.md  deployment.md  project-goals.md  tech-stack.md
.cursor/libs/: ai-models.md  allowed-libs.md  forbidden-libs.md
.cursor/plans/: etapa3-itens1-2_79a09f53.plan.md  melhoria_readme_acadêmico_eb4f4f09.plan.md
.cursor/rules/: ai-usage-rules.md  business-rules.md  code-style.md  git-rules.md  security-rules.md  testing-rules.md
.github/: copilot-instructions.md
.github/context/: architecture.md  deployment.md  project-goals.md  tech-stack.md
.github/libs/: ai-models.md  allowed-libs.md  forbidden-libs.md
.github/prompts/: architecture-review.prompt.md  challenge-solution.prompt.md  extract-business-rules.prompt.md  generate-boilerplate.prompt.md  generate-docs.prompt.md  review-pr.prompt.md  (+4 more)
docs/: API.md  API_EXEMPLOS_TESTE.md  ARQUITETURA_DEPLOY.md  CHANGELOG.md  DOCUMENTACAO_ETAPA3_ITENS_1_2.md  GUIA_ETAPA3_ITENS_1_2.md  MELHORIAS_CONTINUAS_ETAPA2.md  METRICAS.md  MODEL_CARD_FINAL.md  OBSERVABILIDADE.md  PLANO_MONITORAMENTO.md  RELATORIO_MUDANCAS_CV_PANDERA_LOGGING.md  RELATORIO_MUDANCAS_PIPELINE_MLP_MLFLOW.md  RELATORIO_NOTEBOOKS_POS_MUDANCAS.md  RELATORIO_NOTEBOOKS_PRE_MUDANCAS.md  TODO.md  TODO_ETAPA_3.MD  relatorio-tecnico-contexto-cursor.md
notebooks/: 01_eda.ipynb  02_baseline_dummy_logreg.ipynb  03_mlp_pytorch.ipynb  04_mlp_training_early_stopping.ipynb  05_compare_mlp_baselines.ipynb  06_compare_mlp_baselines.ipynb  06_tradeoff_custo_fp_fn.ipynb  mlflow.db
tests/: conftest.py
(+383 files in other folders)
